[package]
name = "wasm2ct"
version = "0.1.0"
authors = ["k <worileqing@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm2ct_derive = {path = "wasm2ct_derive"}
wasm_std = {path = "../wasm_std"}
wasm_mid = {path = "../wasm_mid"}
lazy_static = { version = "1.2.0", features = ["spin_no_std"] }
byteorder = { version = "1.4.2", default-features = false }
hex = "0.4.2"
# rustc-hex = "2.1"
[dev-dependencies]
hex-literal = "0.3.1"


[features]
std = ["wasm_std/std","byteorder/std"]
debug = ["wasm2ct_derive/debug"]

#[[bin]]
#name = "main"
#path = "src/main.rs"