[package]
name = "wasm2ct_derive"
version = "0.1.0"
authors = ["k <worileqing@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["proc-macro"]

[dependencies]
quote = "1.0.7"
syn = { version = "1.0.48", features = ["full", "extra-traits"] }
proc-macro2 = "1.0.24"
tiny-keccak = { version = "2.0.2", default-features = false,features = ["keccak"] }
fixed-hash = { version = "0.6.1", default-features = false }
byteorder = { version = "1.3.4", default-features = false }
log = "0.4.0"
env_logger = "0.8.2"
cfg-if = "1.0"
serde = { version = "1.0.70", default-features = false, features = ["derive"]}
serde_json = {version = "1.0.24",default-features = false, features = ["alloc"]}
serde_derive = "1.0.70"
[features]
debug = []